Add-on overhaul
- Reworked how shared Range nodes work
- Added optional tweening for focused child nodes (overrides follow_focus)
- Exposed focus_mode properties of ScrollContainer's ScrollBars so they can be changed from the IDE
- Updated example scene

--- a/addons/range_container/plugin.cfg
+++ b/addons/range_container/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="RangeContainer"
 description="A ScrollContainer that can be controlled by external Range nodes."
-author="NinStar"
-version="24.04.11"
+author="Ny'hrarr (NinStar)"
+version="25.01.23"
 script="plugin.gd"
